<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:background="#ff757575" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:id="@+id/sub_layout2" android:background="#ffb5b5b5" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_alignParentBottom="true">
        <Button android:id="@+id/ok_btn" android:layout_width="160.0dip" android:layout_height="wrap_content" android:layout_marginTop="4.0dip" android:text="@string/ui_ok_btn" android:layout_alignParentLeft="true" />
        <Button android:id="@+id/cancel_btn" android:layout_width="160.0dip" android:layout_height="wrap_content" android:layout_marginTop="4.0dip" android:text="@string/ui_cancel_btn" android:layout_alignParentRight="true" />
    </RelativeLayout>
    <ScrollView android:scrollbars="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_above="@id/sub_layout2">
        <LinearLayout android:orientation="vertical" android:id="@+id/sub_layout1" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <LinearLayout android:orientation="horizontal" android:id="@+id/sub_layout11" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <CheckBox android:textAppearance="?android:textAppearanceSmall" android:textColor="#ffeeeeee" android:id="@+id/id_check_audio_enable" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="6.0dip" android:text="@string/ui_avparam_audio_enable" />
                <ImageButton android:id="@+id/audio_device_btn" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="6.0dip" android:src="@drawable/settings" />
                <TextView android:textAppearance="?android:textAppearanceSmall" android:textColor="#ffeeeeee" android:id="@+id/id_text_audiodevice" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="6.0dip" android:text="" android:singleLine="true" />
            </LinearLayout>
            <LinearLayout android:orientation="horizontal" android:id="@+id/sub_layout12" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <CheckBox android:textAppearance="?android:textAppearanceSmall" android:textColor="#ffeeeeee" android:id="@+id/id_check_video_enable" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="6.0dip" android:text="@string/ui_avparam_video_enable" />
                <ImageButton android:id="@+id/video_device_btn" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="6.0dip" android:src="@drawable/settings" />
                <TextView android:textAppearance="?android:textAppearanceSmall" android:textColor="#ffeeeeee" android:id="@+id/id_text_videodevice" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="6.0dip" android:text="" android:singleLine="true" />
            </LinearLayout>
            <TextView android:textAppearance="?android:textAppearanceSmall" android:textColor="#ffeeeeee" android:id="@+id/id_text_videosize" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="12.0dip" android:layout_marginRight="12.0dip" android:text="@string/ui_avparam_text_videosize" />
            <RadioGroup android:orientation="horizontal" android:id="@+id/radiogroup_videosize" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:checkedButton="@+id/radio_videosize_vga">
                <RadioButton android:id="@+id/radio_videosize_qvga" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/ui_avparam_videosize_qvga" />
                <RadioButton android:id="@+id/radio_videosize_480x320" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/ui_avparam_videosize_480x320" />
                <RadioButton android:id="@+id/radio_videosize_vga" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/ui_avparam_videosize_vga" />
            </RadioGroup>
            <TextView android:textAppearance="?android:textAppearanceSmall" android:textColor="#ffeeeeee" android:id="@+id/id_text_framerate" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="12.0dip" android:layout_marginRight="12.0dip" android:text="@string/ui_avparam_text_framerate" />
            <RadioGroup android:orientation="horizontal" android:id="@+id/radiogroup_framerate" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:checkedButton="@+id/radio_framerate_c">
                <RadioButton android:id="@+id/radio_framerate_a" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/ui_avparam_framerate_a" />
                <RadioButton android:id="@+id/radio_framerate_b" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/ui_avparam_framerate_b" />
                <RadioButton android:id="@+id/radio_framerate_c" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/ui_avparam_framerate_c" />
            </RadioGroup>
            <CheckBox android:textAppearance="?android:textAppearanceSmall" android:textColor="#ffeeeeee" android:id="@+id/id_check_audioredundance" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="12.0dip" android:layout_marginRight="12.0dip" android:text="@string/ui_avparam_check_audioredundance" />
            <CheckBox android:textAppearance="?android:textAppearanceSmall" android:textColor="#ffeeeeee" android:id="@+id/id_check_videoreliable"   android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="12.0dip" android:layout_marginRight="12.0dip" android:text="@string/ui_avparam_check_videoreliable" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
