<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:background="#ff757575" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:id="@+id/sub_layout0" android:background="#ffd5d5d5" android:layout_width="fill_parent" android:layout_height="5.0dip" android:layout_marginTop="18.0dip" android:layout_marginBottom="8.0dip" android:layout_alignParentTop="true" />
    <TextView android:textAppearance="?android:textAppearanceSmall" android:textColor="#ffeeeeee" android:id="@+id/id_text_name" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="6.0dip" android:layout_marginTop="0.0dip" android:text="@string/ui_text_name" android:layout_below="@id/sub_layout0" />
    <TextView android:textAppearance="?android:textAppearanceSmall" android:textColor="#ff000010" android:id="@+id/id_text_name_val" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="6.0dip" android:layout_toRightOf="@id/id_text_name" android:layout_alignTop="@id/id_text_name" />
    <TextView android:textAppearance="?android:textAppearanceSmall" android:textColor="#ffeeeeee" android:id="@+id/id_text_os_info" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="6.0dip" android:layout_marginTop="12.0dip" android:text="@string/ui_text_os_info" android:layout_below="@id/id_text_name" />
    <TextView android:textAppearance="?android:textAppearanceSmall" android:textColor="#ff000010" android:id="@+id/id_text_os_info_val" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="6.0dip" android:layout_toRightOf="@id/id_text_os_info" android:layout_alignTop="@id/id_text_os_info" />
    <TextView android:textAppearance="?android:textAppearanceSmall" android:textColor="#ffeeeeee" android:id="@+id/id_text_pri_ip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="6.0dip" android:layout_marginTop="12.0dip" android:text="@string/ui_text_pri_ip" android:layout_below="@id/id_text_os_info" />
    <TextView android:textAppearance="?android:textAppearanceSmall" android:textColor="#ff000010" android:id="@+id/id_text_pri_ip_val" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="6.0dip" android:layout_toRightOf="@id/id_text_pri_ip" android:layout_alignTop="@id/id_text_pri_ip" />
    <TextView android:textAppearance="?android:textAppearanceSmall" android:textColor="#ffeeeeee" android:id="@+id/id_text_pub_ip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="6.0dip" android:layout_marginTop="12.0dip" android:text="@string/ui_text_pub_ip" android:layout_below="@id/id_text_pri_ip" />
    <TextView android:textAppearance="?android:textAppearanceSmall" android:textColor="#ff000010" android:id="@+id/id_text_pub_ip_val" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="6.0dip" android:layout_toRightOf="@id/id_text_pub_ip" android:layout_alignTop="@id/id_text_pub_ip" />
    <RelativeLayout android:id="@+id/sub_layout1" android:background="#ffd5d5d5" android:layout_width="fill_parent" android:layout_height="5.0dip" android:layout_marginTop="8.0dip" android:layout_marginBottom="20.0dip" android:layout_below="@id/id_text_pub_ip_val" />
    <RelativeLayout android:id="@+id/sub_layout2" android:background="#ff757575" android:paddingLeft="6.0dip" android:paddingRight="50.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_below="@id/sub_layout1">
        <Button android:id="@+id/av_btn"  android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/ui_btn_av"  android:layout_alignParentTop="true" />
        <Button android:id="@+id/vnc_btn" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/ui_btn_vnc" android:layout_below="@id/av_btn" />
        <Button android:id="@+id/ft_btn"  android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/ui_btn_ft"  android:layout_below="@id/vnc_btn" />
        <Button android:id="@+id/lock_btn" android:layout_width="128.0dip" android:layout_height="wrap_content" android:text="@string/ui_btn_lock"     android:layout_below="@id/ft_btn" android:layout_alignLeft="@id/ft_btn" />
        <Button android:id="@+id/unlock_btn" android:layout_width="128.0dip" android:layout_height="wrap_content" android:text="@string/ui_btn_unlock" android:layout_below="@id/ft_btn" android:layout_alignRight="@id/ft_btn" />
        <Button android:id="@+id/shutdown_btn" android:layout_width="128.0dip" android:layout_height="wrap_content" android:text="@string/ui_btn_shutdown" android:layout_below="@id/lock_btn"   android:layout_alignLeft="@id/lock_btn" />
        <Button android:id="@+id/reboot_btn" android:layout_width="128.0dip" android:layout_height="wrap_content"   android:text="@string/ui_btn_reboot"   android:layout_below="@id/unlock_btn" android:layout_alignRight="@id/unlock_btn" />
        <Button android:id="@+id/uninstall_btn" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/ui_btn_uninstall" android:layout_below="@id/reboot_btn" />
    </RelativeLayout>
</RelativeLayout>
