<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:background="#ff757575" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
  
    <RelativeLayout android:id="@+id/sub_layout1" android:background="#ffb5b5b5" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_alignParentBottom="true">
        <Button android:id="@+id/refresh_btn" android:layout_width="150.0dip" android:layout_height="wrap_content" android:layout_marginTop="4.0dip" android:text="@string/ui_refresh_btn" android:layout_alignParentLeft="true" />
        <Button android:id="@+id/exitapp_btn" android:layout_width="150.0dip" android:layout_height="wrap_content" android:layout_marginTop="4.0dip" android:text="@string/ui_exitapp_btn" android:layout_alignParentRight="true" />
    </RelativeLayout>
    
    <RelativeLayout android:id="@+id/sub_layout2" android:background="#ff707070" android:paddingTop="10.0dip" android:paddingBottom="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_alignParentTop="true">
		<TextView android:textAppearance="?android:textAppearanceSmall" android:textColor="#ff002000" android:id="@+id/id_text_username" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/ui_text_username" android:layout_marginLeft="3.0dip" android:layout_alignParentTop="true" />
		<TextView android:textAppearance="?android:textAppearanceSmall" android:textColor="#ff002000" android:id="@+id/id_text_username_val" android:layout_width="130.0dip" android:layout_height="wrap_content" android:lines="1" android:layout_toRightOf="@id/id_text_username" android:layout_alignTop="@id/id_text_username" />
		<TextView android:textAppearance="?android:textAppearanceSmall" android:textColor="#ff0000b0" android:id="@+id/id_text_change_nick" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/ui_text_change_nick" android:layout_marginLeft="2.0dip" android:layout_toRightOf="@id/id_text_username_val" android:layout_alignTop="@id/id_text_username" />
		<TextView android:textAppearance="?android:textAppearanceSmall" android:textColor="#ff0000b0" android:id="@+id/id_text_change_pass" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/ui_text_change_pass" android:layout_marginLeft="2.0dip" android:layout_toRightOf="@id/id_text_change_nick" android:layout_alignTop="@id/id_text_username" />
		
		<TextView android:textAppearance="?android:textAppearanceSmall" android:textColor="#ff002000" android:id="@+id/id_text_validate_time" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/ui_text_validate_time" android:layout_marginLeft="3.0dip" android:layout_below="@id/id_text_username" />
		<TextView android:textAppearance="?android:textAppearanceSmall" android:textColor="#ff002000" android:id="@+id/id_text_validate_time_val" android:layout_width="260.0dip" android:layout_height="wrap_content" android:lines="1" android:layout_toRightOf="@id/id_text_validate_time" android:layout_alignTop="@id/id_text_validate_time" />
		
		<TextView android:textAppearance="?android:textAppearanceSmall" android:textColor="#ff002000" android:id="@+id/id_text_userscore" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/ui_text_userscore" android:layout_marginLeft="3.0dip" android:layout_below="@id/id_text_validate_time" />
		<TextView android:textAppearance="?android:textAppearanceSmall" android:textColor="#ff002000" android:id="@+id/id_text_userscore_val" android:layout_width="130.0dip" android:layout_height="wrap_content" android:lines="1" android:layout_toRightOf="@id/id_text_userscore" android:layout_alignTop="@id/id_text_userscore" />
		<TextView android:textAppearance="?android:textAppearanceSmall" android:textColor="#ff0000b0" android:id="@+id/id_text_score_detail" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/ui_text_score_detail" android:layout_marginLeft="2.0dip" android:layout_toRightOf="@id/id_text_userscore_val" android:layout_alignTop="@id/id_text_userscore" />
		<TextView android:textAppearance="?android:textAppearanceSmall" android:textColor="#ff0000b0" android:id="@+id/id_text_score_cash"   android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/ui_text_score_cash"   android:layout_marginLeft="2.0dip" android:layout_toRightOf="@id/id_text_score_detail" android:layout_alignTop="@id/id_text_userscore" />
    </RelativeLayout>
    
    <RelativeLayout android:id="@+id/sub_layout3" android:background="#ffb5b5b5" android:paddingLeft="10.0dip" android:paddingRight="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_below="@id/sub_layout2" >
        <Button android:id="@+id/intrusion_btn" android:layout_width="100.0dip" android:layout_height="wrap_content" android:layout_marginTop="4.0dip" android:text="@string/ui_intrusion_btn" android:layout_alignParentLeft="true" />
        <Button android:id="@+id/phonenum_btn"    android:layout_width="100.0dip" android:layout_height="wrap_content" android:layout_marginTop="4.0dip" android:text="@string/ui_phonenum_btn" android:layout_centerHorizontal="true" />
        <Button android:id="@+id/addcam_btn"    android:layout_width="100.0dip" android:layout_height="wrap_content" android:layout_marginTop="4.0dip" android:text="@string/ui_addcam_btn" android:layout_alignParentRight="true" />
    </RelativeLayout>
    
    <ListView android:id="@android:id/list" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_above="@id/sub_layout1" android:layout_below="@id/sub_layout3" />
    <TextView android:id="@android:id/empty" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/msg_empty_addcam_first" android:gravity="center" android:layout_above="@id/sub_layout1" android:layout_below="@id/sub_layout3" />

</RelativeLayout>
