<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:id="@+id/home_layout" android:background="#ff000000" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ImageView android:id="@+id/logo_img" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/logo" android:layout_alignParentTop="true" android:layout_centerHorizontal="true" />
    <RelativeLayout android:id="@+id/sub_layout2" android:background="#ffb5b5b5" android:paddingTop="8.0dip" android:paddingLeft="60.0dip" android:paddingRight="60.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_below="@id/logo_img">
        <EditText android:textSize="16.0sp" android:id="@+id/id_edit_username" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="" android:hint="@string/ui_hint_username" android:singleLine="true" android:maxLength="64" android:layout_alignParentTop="true" />
        <EditText android:textSize="16.0sp" android:id="@+id/id_edit_password" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="" android:hint="@string/ui_hint_password" android:password="true" android:singleLine="true" android:maxLength="64" android:layout_below="@id/id_edit_username" />
        <CheckBox android:textColor="#ff101020" android:id="@+id/id_check_rememberpass" android:layout_width="fill_parent" android:layout_height="wrap_content" android:checked="true" android:text="@string/ui_check_rememberpass" android:layout_below="@id/id_edit_password" />
    </RelativeLayout>
    <RelativeLayout android:id="@+id/sub_layout1" android:background="#ffb5b5b5" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_alignParentBottom="true">
        <Button android:id="@+id/id_btn_login" android:layout_width="160.0dip" android:layout_height="wrap_content" android:layout_marginTop="4.0dip" android:text="@string/ui_btn_login" android:layout_alignParentLeft="true" />
        <Button android:id="@+id/id_btn_register" android:layout_width="160.0dip" android:layout_height="wrap_content" android:layout_marginTop="4.0dip" android:text="@string/ui_btn_register" android:layout_alignParentRight="true" />
    </RelativeLayout>
</RelativeLayout>
